--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
+            <h1>Mahnoor Munir</h1>
             <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
             
             <section class="box">
@@ -21,8 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
+                    <li><a href="https://github.com/mahnoor26/github-slideshow/issues/2">@github_handle</a></li>
+                    <li><a href="https://www.linkedin.com/in/mahnoor-munir-221635221/">@linkedin_handle</a></li>
                     <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
                 </ul>    
             </section>
